fix: update repo

--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "description": "Label with auto-generated background color based on text.",
   "main": "color-label.js",
   "version": "0.0.5",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ifyoumakeit/color-label.git"
-  },
+  "repository": "github:ifyoumakeit/color-label",
   "license": "MIT",
   "keywords": [
     "web-components",
