--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "color-label",
   "description": "Label with auto-generated background color based on text.",
-  "main": "color-label.html",
+  "main": "color-label.js",
   "version": "0.0.1",
   "license": "MIT",
   "keywords": [
